--- a/css/screen.css
+++ b/css/screen.css
@@ -13,6 +13,7 @@ body {
 
 h1,h2,h3,h4,h5,h6  {
 	text-transform: uppercase;
+	font-weight: normal;
 }
 
 img {
@@ -106,9 +107,10 @@ nav[role="navigation"] ul li a:hover {
 div[role="banner"] {
 	margin: 0 auto;
 	max-width: 100%;
+	height: 30em;
 	overflow: auto;
 	padding: 0;
-	background: rgba(27,55,73,1);
+	background: rgba(27,55,73,1) url(../img/daytime.jpg) no-repeat 50% 50%;
 	color: rgba(255,255,255,1);
 	text-align: center;
 	clear: both;
@@ -117,7 +119,7 @@ div[role="banner"] {
 .intro {
 	max-width: 80%;
 	margin: 0 auto;
-	padding: 9em 3% 1em 3%;
+	padding: 20em 3% 1em 3%;
 	text-shadow: 0.1em 0.1em 0.2em rgb(0,30,50);
 }
 
@@ -307,24 +309,46 @@ footer[role="contentinfo"] a:hover {
 	display: inline;
 }
 
-.twitter {
-	background-image: url(img/social-twitter.png);
-	background-image: url(data:image/svg+xml;base64,M166.58,63.228c-4.551,2.02-9.445,3.386-14.578,4c5.238-3.143,9.266-8.119,11.16-14.044
-		c-4.908,2.91-10.336,5.02-16.116,6.161c-4.635-4.937-11.233-8.019-18.529-8.019c-14.019,0-25.383,11.367-25.383,25.383
-		c0,1.989,0.225,3.925,0.657,5.784C82.697,81.436,63.993,71.33,51.473,55.972c-2.188,3.751-3.438,8.11-3.438,12.76
-		c0,8.807,4.482,16.576,11.293,21.129c-4.159-0.132-8.075-1.273-11.496-3.172c-0.002,0.104-0.002,0.209-0.002,0.317
-		c0,12.298,8.75,22.557,20.362,24.892c-2.132,0.577-4.372,0.885-6.688,0.885c-1.637,0-3.227-0.158-4.775-0.453
-		c3.229,10.084,12.602,17.424,23.71,17.626c-8.688,6.807-19.631,10.869-31.526,10.869c-2.046,0-4.068-0.124-6.053-0.357
-		c11.232,7.203,24.576,11.406,38.907,11.406c46.688,0,72.222-38.681,72.222-72.222c0-1.099-0.026-2.194-0.075-3.282
-		C158.871,72.792,163.18,68.321,166.58,63.228z);
+.doc-foot ul li {
+	width: 33%;
+}
+
+.social ul li a {
+	text-indent: -9999px;
+	background-repeat: no-repeat;
+	display: inline-block;
+	width: 2.5em;
+	height: 2.5em;
+	margin: 0 .15em;
+	padding: 0;
 	background-position: center center;
 }
 
-.flickr {
-	background-image: url(img/social-flickr.png);
-	background-image: url(data:image/svg+xml;base64,M166.58,63.228c-4.551,2.02-9.445,3.386-14.578,4c5.238-3.143,9.266-8.119,11.16-14.044c-4.908,2.91-10.336,5.02-16.116,6.161c-4.635-4.937-11.233-8.019-18.529-8.019c-14.019,0-25.383,11.367-25.383,25.383c0,1.989,0.225,3.925,0.657,5.784C82.697,81.436,63.993,71.33,51.473,55.972c-2.188,3.751-3.438,8.11-3.438,12.76c0,8.807,4.482,16.576,11.293,21.129c-4.159-0.132-8.075-1.273-11.496-3.172c-0.002,0.104-0.002,0.209-0.002,0.317c0,12.298,8.75,22.557,20.362,24.892c-2.132,0.577-4.372,0.885-6.688,0.885c-1.637,0-3.227-0.158-4.775-0.453c3.229,10.084,12.602,17.424,23.71,17.626c-8.688,6.807-19.631,10.869-31.526,10.869c-2.046,0-4.068-0.124-6.053-0.357c11.232,7.203,24.576,11.406,38.907,11.406c46.688,0,72.222-38.681,72.222-72.222c0-1.099-0.026-2.194-0.075-3.282C158.871,72.792,163.18,68.321,166.58,63.228z);
-	background-position: center center;
+.twitter {
+	background-image: url(../img/social-twitter-off.png);
 }
+
+.dribbble {
+	background-image: url(../img/social-dribbble-off.png);
+}
+
+.flickr {
+	background-image: url(../img/social-flickr-off.png);
+}
+
+.lanyrd {
+	background-image: url(../img/social-lanyrd-off.png);
+}
+
+.rdio {
+	background-image: url(../img/social-rdio-off.png);
+}
+
+.zerply {
+	background-image: url(../img/social-zerply-off.png);
+}
+
+
 
 
 /*---- Fonts -----*/
