--- a/css/screen.css
+++ b/css/screen.css
@@ -55,6 +55,7 @@ nav[role="navigation"]{
 	text-align: center;
 	overflow: auto;
 }
+
 nav[role="navigation"] h1 {
 	margin: 0 auto;
 	left: 50%;
@@ -62,8 +63,8 @@ nav[role="navigation"] h1 {
 	position: absolute; 
 	z-index: 1;
 	top: .75em;
-	width: 125px;
-	height: 125px;
+	width: 128px;
+	height: 128px;
 	text-indent: -9999px;
 	background: transparent url(../img/logo.png) no-repeat 50% 0;
 }
@@ -123,8 +124,6 @@ nav[role="navigation"] li:nth-child(4), nav[role="navigation"] li:nth-child(5), 
 	margin: 0 0 0 0;
 	background: url(../img/icon-contact.png) no-repeat 0;
 }
-
-
 
 nav[role="navigation"] ul li a {
 	color: rgba(255,255,255,1);
@@ -333,20 +332,19 @@ footer[role="contentinfo"] a:hover {
 	color: rgba(222,218,211,1);
 }
 
-
 .doc-foot ul, .social ul {
-	margin: 0;
+	margin: 0 0 1.5em 0;
 	padding: 0;
 	list-style-type: none;
 	font-size: 1em;
 }
 
-.doc-foot ul li, .social ul li {
-	display: inline;
-}
+/* wide-screen .doc-foot ul li {
+	padding-right: 1em;
+}  */
 
-.doc-foot ul li {
-	width: 33%;
+.social ul li {
+	display: inline;
 }
 
 .social ul li a {
@@ -383,8 +381,6 @@ footer[role="contentinfo"] a:hover {
 .zerply {
 	background-image: url(../img/social-zerply-off.png);
 }
-
-
 
 
 /*---- Fonts -----*/
