--- a/css/screen.css
+++ b/css/screen.css
@@ -49,7 +49,7 @@ a:active {
 nav[role="navigation"]{
 	margin: 0 auto;
 	max-width: 100%;
-	padding: 1em 5% 1em 5%;
+	padding: 2em 5% 1em 5%;
 	background: #000;
 	background: rgba(0,0,0,1);
 	text-align: center;
@@ -62,7 +62,7 @@ nav[role="navigation"] h1 {
 	margin: 0 0 0 -62.5px;
 	position: absolute; 
 	z-index: 1;
-	top: .75em;
+	top: 9em; /* top: .75em; */
 	width: 128px;
 	height: 128px;
 	text-indent: -9999px;
@@ -70,60 +70,88 @@ nav[role="navigation"] h1 {
 }
 
 nav[role="navigation"] ul {
-	margin: 0;
-	padding: 0;
+	margin: 0 auto;
+	padding: 0 0 3em 0;
 	list-style-type: none;
 	font-size: 1em;
-	float: left;
 	width: 100%;
 }
 
-nav[role="navigation"] ul li {
-	display: inline;
-	width: 13%;
+nav[role="navigation"] ul {
+    float: none;
+    width: 90%;
+    -webkit-column-count: 2;
+    -webkit-column-gap: .5em;
+    -moz-column-count: 2;
+    -moz-column-gap: .5em;
+    column-count: 2;
+    column-gap: .5em;
 }
-
-nav[role="navigation"] ul li a {
-	padding-left: 22px;
-}
-
-nav[role="navigation"] li:nth-child(1), nav[role="navigation"] li:nth-child(2), nav[role="navigation"] li:nth-child(3) {
-	float: left;
-}
-
-nav[role="navigation"] li:nth-child(4), nav[role="navigation"] li:nth-child(5), nav[role="navigation"] li:nth-child(6) {
-	float: right;
+  
+nav[role="navigation"] ul li a {  /* this stuff changes */
+	display: block;
+	padding-top: 1em; 
+	margin-bottom: 1em;
 }
 
 .icon-illustration {
-	margin: 0 0 0 0;
+	background: url(../img/icon-illustration.png) no-repeat 50% 0;
+}
+
+.icon-design {
+	background: url(../img/icon-design.png) no-repeat 50% 0;
+}
+
+.icon-photo {
+	background: url(../img/icon-photo.png) no-repeat 50% 0;
+}
+
+.icon-about {
+	background: url(../img/icon-about.png) no-repeat 50% 0;
+}
+
+.icon-blog {
+	background: url(../img/icon-blog.png) no-repeat 50% 0;
+}
+
+.icon-contact {
+	background: url(../img/icon-contact.png) no-repeat 50% 0;
+}
+
+
+/* Wide screen
+
+.icon-illustration {
+	margin: 0;
 	background: url(../img/icon-illustration.png) no-repeat 0;
 }
 
 .icon-design {
-	margin: 0 0 0 0;
+	margin: 0;
 	background: url(../img/icon-design.png) no-repeat 0;
 }
 
 .icon-photo {
-	margin: 0 0 0 0;
+	margin: 0;
 	background: url(../img/icon-photo.png) no-repeat 0;
 }
 
 .icon-about {
-	margin: 0 0 0 0;
+	margin: 0;
 	background: url(../img/icon-about.png) no-repeat 0;
 }
 
 .icon-blog {
-	margin: 0 0 0 0;
+	margin: 0;
 	background: url(../img/icon-blog.png) no-repeat 0;
 }
 
 .icon-contact {
-	margin: 0 0 0 0;
+	margin: 0;
 	background: url(../img/icon-contact.png) no-repeat 0;
 }
+
+*/
 
 nav[role="navigation"] ul li a {
 	color: rgba(255,255,255,1);
@@ -142,10 +170,10 @@ nav[role="navigation"] ul li a:hover {
 div[role="banner"] {
 	margin: 0 auto;
 	max-width: 100%;
-	height: 30em;
+	height: 27.5em;
 	overflow: auto;
 	padding: 0;
-	background: rgba(27,55,73,1) url(../img/daytime.jpg) no-repeat 50% 50%;
+	background: rgba(27,55,73,1) url(../img/daytime.jpg) no-repeat 50% 82%;
 	color: rgba(255,255,255,1);
 	text-align: center;
 	clear: both;
@@ -154,7 +182,7 @@ div[role="banner"] {
 .intro {
 	max-width: 80%;
 	margin: 0 auto;
-	padding: 20em 3% 1em 3%;
+	padding: 12em 3% 1em 3%;
 	text-shadow: 0.1em 0.1em 0.2em rgb(0,30,50);
 }
 
@@ -173,16 +201,11 @@ div[role="banner"] {
 .contain {
 	margin: 0 auto;
 	max-width: 90%;
-	padding: 2em 0;
+	padding: 3em 0;
 }
 
 /*---- Main -----*/
 
-/* main[role="main"] {
-	width: 76.04166666%;
-	float: left;
-	border: 1px solid red;
-} */
 
 article header h1 {
 	line-height: 1.2em;
@@ -195,6 +218,10 @@ article header h1 a, article header h1 a:hover, article header h1 a:active {
 
 article header p {
 	font-size: .85em;
+}
+
+.blogthumb {
+	margin: auto 0;
 }
 
 article .excerpt-lg {
@@ -212,18 +239,12 @@ article footer ul li {
 }
 
 article footer ul li:first-of-type {
-padding: 0 2em 0 0;
+padding: 0 5em 0 0;
 }
 
 
 /*---- Complementary ----*/
 
-
-/* section[role="complementary"] {
-	width: 20.95833333%;
-	float: right;
-	border: 1px solid blue;
-} */
 
 section[role="complementary"] a {
 	-webkit-transition: background .1s linear;
@@ -280,13 +301,37 @@ section[role="complementary"] h2 {
 	color: rgba(25,25,25,1);
 	border-bottom: none; 
 	display: block;
-	padding:  .5em 0 .5em .5em;
+	padding: .5em 0 .5em .5em;
 	text-decoration: none;
 }
 
 .categories ul li a:hover {
 	background: rgba(210,200,185,.15);
 }
+
+.locations {
+	padding: 1em 0 0 0;
+	width: auto;
+	margin: 0 auto;
+}
+	
+.locations p {
+	font-size: 1em;
+}
+
+.locations ul li {
+	margin: 0 0 1.5em 0;
+	background: url(../img/badge-vancouver.png) no-repeat 0;
+	padding-left: 80px;
+}
+
+.locations ul li p {
+	margin: 0;
+}
+
+
+
+/* Wide screen
 
 .locations {
 	margin-top: 2.5em;
@@ -305,6 +350,9 @@ section[role="complementary"] h2 {
 .locations ul li p {
 	margin: 0;
 }
+
+*/
+
 
 
 /*---- Footer -----*/
@@ -339,9 +387,16 @@ footer[role="contentinfo"] a:hover {
 	font-size: 1em;
 }
 
-/* wide-screen .doc-foot ul li {
-	padding-right: 1em;
-}  */
+.doc-foot ul {
+    float: none;
+    width: 100%;
+    -webkit-column-count: 2;
+    -webkit-column-gap: .5em;
+    -moz-column-count: 2;
+    -moz-column-gap: .5em;
+    column-count: 2;
+    column-gap: .5em;
+}
 
 .social ul li {
 	display: inline;
@@ -381,6 +436,139 @@ footer[role="contentinfo"] a:hover {
 .zerply {
 	background-image: url(../img/social-zerply-off.png);
 }
+
+
+/*---- Media Queries -----*/
+
+@media screen and (min-width: 70em) {
+
+nav[role="navigation"]{
+	margin: 0 auto;
+	padding: 1em 5% 1em 5%;
+	text-align: center;
+}
+
+nav[role="navigation"] h1 {
+	top: .75em;
+}
+
+nav[role="navigation"] ul {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	-webkit-column-count: 1;
+   -webkit-column-gap: 0;
+   -moz-column-count: 1;
+   -moz-column-gap: 0;
+   column-count: 1;
+   column-gap: 0;
+}
+
+nav[role="navigation"] ul li {
+	width: 13%;
+}
+
+nav[role="navigation"] ul li a {
+	display: inline;
+	padding-left: 22px;
+	padding-top: 0; 
+	margin-bottom: 0;
+}
+
+nav[role="navigation"] li:nth-child(1), nav[role="navigation"] li:nth-child(2), nav[role="navigation"] li:nth-child(3) {
+	float: left;
+}
+
+nav[role="navigation"] li:nth-child(4), nav[role="navigation"] li:nth-child(5), nav[role="navigation"] li:nth-child(6) {
+	float: right;
+}
+
+.icon-illustration {
+	margin: 0;
+	background: url(../img/icon-illustration.png) no-repeat 0;
+}
+
+.icon-design {
+	margin: 0;
+	background: url(../img/icon-design.png) no-repeat 0;
+}
+
+.icon-photo {
+	margin: 0;
+	background: url(../img/icon-photo.png) no-repeat 0;
+}
+
+.icon-about {
+	margin: 0;
+	background: url(../img/icon-about.png) no-repeat 0;
+}
+
+.icon-blog {
+	margin: 0;
+	background: url(../img/icon-blog.png) no-repeat 0;
+}
+
+.icon-contact {
+	margin: 0;
+	background: url(../img/icon-contact.png) no-repeat 0;
+}
+
+
+.intro {
+	max-width: 80%;
+	margin: 0 auto;
+	padding: 16.5em 3% 1em 3%;
+	text-shadow: 0.1em 0.1em 0.2em rgb(0,30,50);
+}
+
+.intro h3 {
+	font-size: 1.5em;
+}
+
+.intro p {
+	font-size: 1em;
+}
+
+main[role="main"] {
+	width: 76.04166666%;
+	float: left;
+	border: 1px solid red;
+} 
+
+section[role="complementary"] {
+	width: 20.95833333%;
+	float: right;
+	border: 1px solid blue;
+} 
+
+.doc-foot ul {
+	width: auto;
+	float: left;
+	-webkit-column-count: 1;
+	-webkit-column-gap: 0;
+	-moz-column-count: 1;
+	-moz-column-gap: 0;
+	column-count: 1;
+	column-gap: 0;
+}
+
+.doc-foot ul li {
+	padding-right: 1em;
+	display: inline;
+} 
+
+.social ul {
+	margin: 0;
+}
+
+.social ul li {
+	float: right;
+}
+
+}
+
+
+
 
 
 /*---- Fonts -----*/
