--- a/css/screen.css
+++ b/css/screen.css
@@ -173,7 +173,7 @@ div[role="banner"] {
 	height: 27.5em;
 	overflow: auto;
 	padding: 0;
-	background: rgba(27,55,73,1) url(../img/daytime.jpg) no-repeat 50% 82%;
+	background: rgba(27,55,73,1) url(../img/nighttime.jpg) no-repeat 50% 82%;
 	color: rgba(255,255,255,1);
 	text-align: center;
 	clear: both;
@@ -593,7 +593,7 @@ section[role="complementary"] {
 }
 
 .doc-foot ul li {
-	padding-right: 1em;
+	padding-right: 2em;
 	display: inline;
 } 
 
