--- a/css/screen.css
+++ b/css/screen.css
@@ -52,8 +52,10 @@ nav[role="navigation"]{
 	padding: 2em 5% 1em 5%;
 	background: #000;
 	background: rgba(0,0,0,1);
+	position: relative;
 	text-align: center;
-	overflow: auto;
+	float: left;
+	width: 90%;
 }
 
 nav[role="navigation"] h1 {
@@ -62,7 +64,7 @@ nav[role="navigation"] h1 {
 	margin: 0 0 0 -62.5px;
 	position: absolute; 
 	z-index: 1;
-	top: 9em; /* top: .75em; */
+	bottom: -4em;
 	width: 128px;
 	height: 128px;
 	text-indent: -9999px;
@@ -450,6 +452,34 @@ footer[role="contentinfo"] a:hover {
 
 
 /*---- Media Queries -----*/
+.nav-toggle {
+	display: none;
+	left: 0;
+	position: absolute;
+	top: 0;
+}
+.toggled-nav {
+	-webkit-transition: max-height 1s linear;
+	-moz-transition: max-height 1s linear;
+	-o-transition: max-height 1s linear;
+	transition: max-height 1s ease;
+	overflow: hidden;
+	max-height: 400px;
+	padding: 0 !important; /* TODO: This is just an override; I didn’t want to mess with your styles too much. */
+}
+.hide-me {
+	overflow: hidden;
+}
+@media screen and (max-width: 69.9375em) {
+	.hide-me {
+		max-height: 0;
+		display: block;
+	}
+	.nav-toggle {
+		display: block;
+	}
+}
+
 
 @media screen and (min-width: 70em) {
 
