--- a/css/screen.css
+++ b/css/screen.css
@@ -481,10 +481,10 @@ a:active.nav-toggle {
 }
 
 .toggled-nav {
-	-webkit-transition: max-height 1s linear;
-	-moz-transition: max-height 1s linear;
-	-o-transition: max-height 1s linear;
-	transition: max-height 1s ease;
+	-webkit-transition: max-height .5s linear;
+	-moz-transition: max-height .5s linear;
+	-o-transition: max-height .5s linear;
+	transition: max-height .5s ease;
 	overflow: hidden;
 	max-height: 400px;
 	padding: 0 !important; /* TODO: This is just an override; I didn’t want to mess with your styles too much. */
